[gd_scene load_steps=9 format=3 uid="uid://c2lf4s6asa3hd"]

[ext_resource type="Script" path="res://script/gallery.gd" id="1_1h3u5"]
[ext_resource type="PackedScene" uid="uid://86syd1gxc5vg" path="res://scene/button_with_label.tscn" id="1_hb1tq"]
[ext_resource type="PackedScene" uid="uid://q4nndm5sqvkq" path="res://scene/button_listener_label.tscn" id="2_4788g"]
[ext_resource type="Texture2D" uid="uid://b7b0w7f4ierdo" path="res://asset/buttons/gallery/play_button.png" id="4_55xxr"]
[ext_resource type="Texture2D" uid="uid://k0tskhx506xq" path="res://asset/buttons/gallery/lock_filled.png" id="5_b7oy1"]
[ext_resource type="Texture2D" uid="uid://odluy864meks" path="res://asset/buttons/gallery/photo.png" id="6_mn438"]
[ext_resource type="Texture2D" uid="uid://bbnv4rvy2pbtb" path="res://asset/buttons/gallery/photo_concept.png" id="7_tk81c"]
[ext_resource type="PackedScene" uid="uid://dsl6rcjklo1pb" path="res://scene/UI/control_hint.tscn" id="8_af2wu"]

[node name="Gallery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1h3u5")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonListenerLabel" parent="." instance=ExtResource("2_4788g")]
layout_mode = 0
offset_top = 948.0
offset_bottom = 1148.0

[node name="GalleryGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = 1620.0
offset_bottom = 930.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 60
columns = 4

[node name="GalleryItem_OpeningCutscene" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("4_55xxr")
texture_disabled = ExtResource("5_b7oy1")
stretch_mode = 0
button_description_text = "Opening Cutscene"

[node name="GalleryItem_EndingScene" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("4_55xxr")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_WallCutscene" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("4_55xxr")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_Sketch_1" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("6_mn438")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_Sketch_2" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("6_mn438")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_concept_1" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("7_tk81c")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_concept_2" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("7_tk81c")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_FinaleImage" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("6_mn438")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="GalleryItem_ClientSequence" parent="GalleryGrid" instance=ExtResource("1_hb1tq")]
layout_mode = 2
texture_normal = ExtResource("4_55xxr")
texture_disabled = ExtResource("5_b7oy1")
button_description_text = "EndingScene"

[node name="CutscenePlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
bus = &"Music"

[node name="DisplayItem" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonControls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -311.0
offset_top = -238.0
offset_right = 289.0
offset_bottom = 62.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.527408, 0.527408)
theme_override_constants/separation = 130

[node name="Confirm" parent="ButtonControls" instance=ExtResource("8_af2wu")]
layout_mode = 2
controlFunctionText = "- Confirm"
buttonType = 4

[node name="Cancel_Back" parent="ButtonControls" instance=ExtResource("8_af2wu")]
layout_mode = 2
controlFunctionText = "- Back"
buttonType = 5

[node name="Navigation" parent="ButtonControls" instance=ExtResource("8_af2wu")]
layout_mode = 2
controlFunctionText = "- Navigation"
buttonType = 6

[connection signal="button_down" from="GalleryGrid/GalleryItem_OpeningCutscene" to="." method="_on_gallery_item_opening_cutscene_button_down"]
[connection signal="button_down" from="GalleryGrid/GalleryItem_Sketch_1" to="." method="_on_gallery_item_sketch_1_button_down"]
[connection signal="button_down" from="GalleryGrid/GalleryItem_FinaleImage" to="." method="_on_gallery_item_sketch_1_button_down"]
[connection signal="button_down" from="GalleryGrid/GalleryItem_ClientSequence" to="." method="_on_gallery_item_client_sequence_button_down"]
